--- a/apps/react/index.html
+++ b/apps/react/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="theme-color" content="#ffffff" />
 		<link rel="icon" type="image/svg+xml" href="/logo.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -9,8 +10,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet" />
 		<title>Music Theory Flash Cards</title>
 	</head>
-	<body>
-		<div id="root" class="bg-slate-100 text-slate-950"></div>
+	<body class="bg-slate-100 text-slate-950">
+		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
