moving files and adding source images

--- a/apps/react/tests/music-notation-eighth-test.html
+++ b/apps/react/tests/music-notation-eighth-test.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>MusicNotation Test</title>
+		<title>MusicNotation Eighth Test</title>
 	</head>
 	<body>
 		<div id="root"></div>
-		<script type="module" src="/test/music-notation-test.tsx"></script>
+		<script type="module" src="/tests/music-notation-eighth-test.tsx"></script>
 	</body>
 </html>
